src/main/java/com/example/demo/global/exception/error/member/WrongPhoneNumInputException.java
package com.example.demo.global.exception.error.member;

public class WrongPhoneNumInputException {
}
